{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 33,
  "lineage": "48751c60-3bc5-312b-edea-400cff575f2f",
  "resources": [
    {
      "module": "module.bsthost",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "bsthost1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.234.94.181",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dev-pip3",
            "resource_group_name": "dev-ashishrg1",
            "sku": "Standard",
            "tags": {
              "environment": "Dev envortmnt ke liye3"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.bsthost",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "bsthost1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/27",
            "address_prefixes": [
              "10.0.3.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-ashishrg1",
            "virtual_network_name": "dev-vnetsubnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.linuxvm",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "VM1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip1",
                "subnet_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/fronted-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-DF-1D-50",
            "name": "dev-tatagorup-nic",
            "network_security_group_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-ashishrg1",
            "virtual_machine_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Compute/virtualMachines/dev-vm1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "VM2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nicok",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip2",
                "subnet_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-B7-28-3E",
            "name": "dev-tatagorup-nicok",
            "network_security_group_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "dev-ashishrg1",
            "virtual_machine_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Compute/virtualMachines/dev-vm2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.netsecass",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgacc1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip1",
                "subnet_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/fronted-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-DF-1D-50",
            "name": "dev-tatagorup-nic",
            "network_security_group_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-ashishrg1",
            "virtual_machine_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Compute/virtualMachines/dev-vm1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "nsgacc2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nicok",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip2",
                "subnet_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-B7-28-3E",
            "name": "dev-tatagorup-nicok",
            "network_security_group_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "dev-ashishrg1",
            "virtual_machine_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Compute/virtualMachines/dev-vm2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.netsecass",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgacc1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "location": "northeurope",
            "name": "dev-nsg1",
            "resource_group_name": "dev-ashishrg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Envement": "Nsg rule ke liye"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        },
        {
          "index_key": "nsgacc2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg2",
            "location": "northeurope",
            "name": "dev-nsg2",
            "resource_group_name": "dev-ashishrg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 121,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Envement": "Nsg rule ke liye"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.netsecass",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsgassocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgacc1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nic|/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "network_interface_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nic",
            "network_security_group_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.netsecass.data.azurerm_network_interface.nic",
            "module.netsecass.data.azurerm_network_security_group.nsg",
            "module.nic.azurerm_network_interface.nic",
            "module.nic.data.azurerm_public_ip.pip",
            "module.nic.data.azurerm_subnet.subnet",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.pip.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "nsgacc2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nicok|/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg2",
            "network_interface_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nicok",
            "network_security_group_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.netsecass.data.azurerm_network_interface.nic",
            "module.netsecass.data.azurerm_network_security_group.nsg",
            "module.nic.azurerm_network_interface.nic",
            "module.nic.data.azurerm_public_ip.pip",
            "module.nic.data.azurerm_subnet.subnet",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.pip.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "68.219.227.188",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dev-pip1",
            "resource_group_name": "dev-ashishrg1",
            "sku": "Standard",
            "tags": {
              "environment": "Dev envortmnt ke liye1"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.238.77.122",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dev-pip2",
            "resource_group_name": "dev-ashishrg1",
            "sku": "Standard",
            "tags": {
              "environment": "Dev envortmnt ke liye2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/fronted-subnet",
            "name": "fronted-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-ashishrg1",
            "virtual_network_name": "dev-vnetsubnet"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/backend-subnet",
            "name": "backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-ashishrg1",
            "virtual_network_name": "dev-vnetsubnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nic",
            "internal_domain_name_suffix": "5liu3eapvtdelm3qvgu24x2ibc.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip1",
                "subnet_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/fronted-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-DF-1D-50",
            "name": "dev-tatagorup-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-ashishrg1",
            "virtual_machine_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Compute/virtualMachines/dev-vm1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-tatagorup-nic",
            "resource_group_name": "dev-ashishrg1",
            "subscription_id": "ff1980ab-1170-4014-971d-df65aabf1e5b"
          },
          "dependencies": [
            "module.nic.data.azurerm_public_ip.pip",
            "module.nic.data.azurerm_subnet.subnet",
            "module.pip.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkInterfaces/dev-tatagorup-nicok",
            "internal_domain_name_suffix": "5liu3eapvtdelm3qvgu24x2ibc.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip2",
                "subnet_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-B7-28-3E",
            "name": "dev-tatagorup-nicok",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "dev-ashishrg1",
            "virtual_machine_id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Compute/virtualMachines/dev-vm2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-tatagorup-nicok",
            "resource_group_name": "dev-ashishrg1",
            "subscription_id": "ff1980ab-1170-4014-971d-df65aabf1e5b"
          },
          "dependencies": [
            "module.nic.data.azurerm_public_ip.pip",
            "module.nic.data.azurerm_subnet.subnet",
            "module.pip.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "location": "northeurope",
            "name": "dev-nsg1",
            "resource_group_name": "dev-ashishrg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Envement": "Nsg rule ke liye"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-nsg1",
            "resource_group_name": "dev-ashishrg1",
            "subscription_id": "ff1980ab-1170-4014-971d-df65aabf1e5b"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "nsg2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg2",
            "location": "northeurope",
            "name": "dev-nsg2",
            "resource_group_name": "dev-ashishrg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 121,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Envement": "Nsg rule ke liye"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-nsg2",
            "resource_group_name": "dev-ashishrg1",
            "subscription_id": "ff1980ab-1170-4014-971d-df65aabf1e5b"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.pip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pip1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "68.219.227.188",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dev-pip1",
            "resource_group_name": "dev-ashishrg1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev envortmnt ke liye1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "pip2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.238.77.122",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dev-pip2",
            "resource_group_name": "dev-ashishrg1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev envortmnt ke liye2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "pip3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/publicIPAddresses/dev-pip3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.234.94.181",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "dev-pip3",
            "resource_group_name": "dev-ashishrg1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev envortmnt ke liye3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "904ed1fa-ac0f-45c6-b3b0-a9a9cf5f880a",
            "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet",
            "location": "northeurope",
            "name": "dev-vnetsubnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-ashishrg1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/fronted-subnet",
                "name": "fronted-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/backend-subnet",
                "name": "backend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.3.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ff1980ab-1170-4014-971d-df65aabf1e5b/resourceGroups/dev-ashishrg1/providers/Microsoft.Network/virtualNetworks/dev-vnetsubnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Enviorment": "vnet1keliye"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnetsubnet",
            "resource_group_name": "dev-ashishrg1",
            "subscription_id": "ff1980ab-1170-4014-971d-df65aabf1e5b"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}